# nodejs-questdb-client

./: .gitignore  .gitmodules  .npmignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  binding.gyp  examples.manifest.yaml  index.js  notes.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
docs/: HttpTransport.html  HttpTransportBase.html  Micros.html  Nanos.html  Row.html  Sender.html  SenderBufferBase.html  SenderBufferV1.html  SenderBufferV2.html  SenderOptions.html  TcpTransport.html  Timestamp.html  UndiciTransport.html  global.html  hierarchy.html  index.html  index.js.html  module-@questdb_nodejs-client.html  modules.html  options.js.html  sender.js.html  src_options.js.html  src_row.js.html  src_sender.js.html  src_timestamp.js.html
examples/: arrays.ts  auth.js  auth_tcp.js  auth_tls.js  auth_tls_tcp.js  basic.js  from_conf.js  workers.js  workers.ts
include/: sender.h
scripts/: generateCerts.sh  generateDocs.sh  postinstall.js
src/: builder.js  index.ts  logging.js  logging.ts  options.js  options.ts  questdbclient.cc  row.js  sender.cc  sender.js  sender.ts  timestamp.js  util.js  utils.ts  validation.js  validation.ts
test/: builder.test.js  flametest.js  logging.test.js  logging.test.ts  mockhttp.js  mockproxy.js  options.test.js  options.test.ts  perftest.js  proxy.js  proxyfunctions.js  sender.buffer.test.ts  sender.config.test.ts  sender.integration.test.ts  sender.test.js  sender.test.ts  sender.transport.test.ts  test.js  testapp.js  testapp.save.js  testapp.ts  utils.decimal.test.ts
types/: index.d.ts
(+70 files in other folders)
